# geakit-cli

geakit/: CMakeLists.txt
geakit/src/data/: account.cpp  account.h  locproject.cpp  locproject.h  locpromanager.cpp  locpromanager.h
geakit/src/gui/: gaddrepositorydialog.cpp  gaddrepositorydialog.h  gmainwindow.cpp  gmainwindow.h  gsettingsdialog.cpp  gsettingsdialog.h
geakit/uis/: gaddrepositorydialog.ui  gmainwindow.ui
